Fixed menu on mobile

--- a/app/src/layout/sidebar/sidebar.css
+++ b/app/src/layout/sidebar/sidebar.css
@@ -42,7 +42,7 @@
         top: 0px;
         left:0px;
         width: 256px;
-        height: 95vh;
+        height: 100vh;
         z-index: 600;
         background-color: rgb(16, 17, 22);
         border-radius: 0px;
